--- a/ftd/Makefile
+++ b/ftd/Makefile
@@ -7,6 +7,7 @@ CFLAGS += $(shell freetype-config --cflags)
 
 PREFIX ?= /usr/local
 BINPREFIX = $(PREFIX)/bin
+MANPREFIX = $(PREFIX)/man
 
 BIN = $(NAME)
 SRC = $(NAME).c
@@ -17,9 +18,12 @@ $(BIN): $(SRC)
 install:
 	mkdir -p $(DESTDIR)$(BINPREFIX)/
 	cp -f $(BIN) $(DESTDIR)$(BINPREFIX)/
+	mkdir -p $(DESTDIR)$(MANPREFIX)/man1/
+	cp -f $(NAME).1 $(DESTDIR)$(MANPREFIX)/man1/
 
 uninstall:
 	rm -f $(DESTDIR)$(BINPREFIX)/$(BIN)
+	rm -f $(DESTDIR)$(BINPREFIX)/man1/$(NAME).1
 
 clean:
 	rm -f $(BIN)
